# HMI

./: .gitignore  LICENSE  README.md  pyproject.toml
src/app/: flujo.txt  main.kv  main.py
src/app/database/: roaster.sqlite3  sqliteConf.py
src/pruebas/: Notas.txt  boton.py  boton2.py  definiciondecolres.py  definiciondeiconos.py  estilodetema.py  estilosdefuente.py  mmmain.py  tonosdebg.py
