[tool.poetry]
name = "hmi-roaster"
version = "0.1.0"
description = ""
authors = ["ironwall24 <gabosorio_3808@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
kivy = "^1.11.1"
kivymd = "^0.104.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
